--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <p class="hello"> Hello! </p>
+    <p class="hello"> High Quality Gaems </p>
 </body>
 </html>
