--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <p class="hello"> High Quality Gaems </p>
+    <h1 class="hello"> High Quality Gaems </h1>
+    <h2>Our Games</h2>
+    <img src="" alt="">
+    <p>Roblox tycoon</p>
 </body>
 </html>
