--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1 class="hello"> High Quality Gaems </h1>
-    <h2>Our Games</h2>
-    <img src="" alt="">
-    <p>Roblox tycoon</p>
+    <header>
+        <h1 class="hello"> High Quality Gaems </h1>
+    </header>
+    <main>
+        <h2>Our Games</h2>
+        <img src="./images/tycoon.jpg" alt="roblox tycoon">
+        <p>Roblox tycoon</p>
+        <img src="./images/camp.jpg" alt="Defensive camp">
+        <p>Defensive camp</p>
+    </main>
+    <footer>
+        <p>All rights reserved</p>
+        <h3>&copy; High Quality Gaems</h3>
+    </footer>
 </body>
 </html>
