Created new html files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Highqualitygaems</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -13,10 +13,16 @@
     </header>
     <main>
         <h2>Our Games</h2>
-        <img src="./images/tycoon.jpg" alt="roblox tycoon">
-        <p>Roblox tycoon</p>
-        <img src="./images/camp.jpg" alt="Defensive camp">
-        <p>Defensive camp</p>
+        <a href="./tycoon.html">
+            <img src="./images/tycoon.jpg" alt="roblox tycoon">
+            <p>Roblox tycoon</p>
+        </a>
+        
+        <a href="./camp.html">
+            <img src="./images/camp.jpg" alt="Defensive camp">
+            <p>Defensive camp</p>
+        </a>
+        
     </main>
     <footer>
         <p>All rights reserved</p>
