--- a/tycoon.html
+++ b/tycoon.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Highqualitygaems</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <h1 class="hello"> High Quality Gaems </h1>
     </header>
+    <main>
+        <img src="./images/tycoonphoto1.jpg" alt="tycoon">
+    </main>
 </body>
 </html>
