--- a/camp.html
+++ b/camp.html
@@ -12,7 +12,7 @@
         <h1 class="hello"> High Quality Gaems </h1>
     </header>
     <main>
-
+        <img src="./images/campphoto1.jpg" alt="Camp">
     </main>
 </body>
 </html>
