--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <h1 class="hello"> High Quality Gaems </h1>
+        <a href="./index.html">
+            <h1 class="hello"> High Quality Gaems </h1>
+        </a>
     </header>
     <main>
         <h2>Our Games</h2>
