--- a/tycoon.html
+++ b/tycoon.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <h1 class="hello"> High Quality Gaems </h1>
+        <a href="./index.html">
+            <h1 class="hello"> High Quality Gaems </h1>
+        </a>
     </header>
     <main>
         <img src="./images/tycoonphoto1.jpg" alt="tycoon">
