--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <a href="./index.html">
+            <img src="./images/logo.jpg" alt="logo" width="100" class="logo">
             <h1 class="hello"> High Quality Gaems </h1>
         </a>
     </header>
