--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Highqualitygaems</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
 </head>
 <body>
     <header>
@@ -25,7 +29,9 @@
             <img src="./images/camp.jpg" alt="Defensive camp">
             <p>Defensive camp</p>
         </a>
-        
+        <h2>Our team</h2>
+        <p>We have a team of active developers working on making the game even better, so if you find any bugs or glitches, please
+        report them as soon as possible through our feedback system.</p>
     </main>
     <footer>
         <p>All rights reserved</p>
