Border radius and some changes

--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
     <header>
         <a href="./index.html">
             <img src="./images/logo.jpg" alt="logo" width="100" class="logo">
-            <h1 class="hello"> High Quality Gaems </h1>
+            
         </a>
+        <h1 class="hello"> High Quality Gaems </h1>
     </header>
     <main>
         <h2>Our Games</h2>
         <a href="./tycoon.html">
-            <img src="./images/tycoon.jpg" alt="roblox tycoon">
+            <img src="./images/tycoon.jpg" alt="roblox tycoon" class="tycoon">
             <p>Roblox tycoon</p>
         </a>
         
         <a href="./camp.html">
-            <img src="./images/camp.jpg" alt="Defensive camp">
+            <img src="./images/camp.jpg" alt="Defensive camp" class="camp">
             <p>Defensive camp</p>
         </a>
         <h2>Our team</h2>
