--- a/camp.html
+++ b/camp.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Highqualitygaems</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles2.css">
 </head>
 <body>
     <header>
         <a href="./index.html">
-            <h1 class="hello"> High Quality Gaems </h1>
+            <img src="./images/logo.jpg" alt="logo" width="100" class="logo">
+            
         </a>
+        <h1 class="hello"> High Quality Gaems </h1>
     </header>
     <main>
         <img src="./images/campphoto1.jpg" alt="Camp">
