--- a/tycoon.html
+++ b/tycoon.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles2.ss">
+    <link rel="stylesheet" href="./css/styles2.css">
 </head>
 <body>
     <header>
@@ -20,6 +20,8 @@
     </header>
     <main>
         <img src="./images/tycoonphoto1.jpg" alt="tycoon">
+        <h3>High quality roblox tycoon</h3>
+        <p>In this tycoon you can build your house, farm and you can find many badges.</p>
     </main>
 </body>
 </html>
